@@ -381,9 +381,8 @@ AZMenuEntryFrame* AZMenuEntryFrameUnder(int x, int y)
     client = _client;
 
     attr.event_mask = FRAME_EVENTMASK;
-    attr.save_under = True;
     window = createWindow(RootWindow(ob_display, ob_screen), 
-			CWEventMask|CWSaveUnder, &attr);
+			  CWEventMask, &attr);
     attr.event_mask = TITLE_EVENTMASK;
     title = createWindow(window, CWEventMask, &attr);
     items = createWindow(window, 0, NULL);
