@@ -1,6 +1,7 @@
 2007-04-04  Yen-Ju Chen <yjchenx at gmail>
 
 	* Update to r5512 of OpenBox3
+	* Update to r5534 of OpenBox3
 
 2007-04-03  Yen-Ju Chen <yjchenx at gmail>
 
